# server

./: CMakeLists.txt  appveyor.yml  configure.cmake
client/: client_priv.h  mysql.cc  mysql_upgrade.c  mysqlbinlog.cc  mysqldump.c
cmake/: cpack_rpm.cmake  mysql_version.cmake
debian/: autobake-deb.sh  control  mariadb-server-10.5.install  rules
extra/: CMakeLists.txt
extra/mariabackup/: backup_copy.cc  backup_mysql.cc  backup_mysql.h  ds_local.cc  xtrabackup.cc  xtrabackup.h
include/: json_lib.h  m_ctype.h  my_base.h  my_handler_errors.h  my_pthread.h  my_sys.h
include/mysql/: plugin_audit.h.pp  plugin_auth.h.pp  plugin_encryption.h.pp  plugin_ftparser.h  plugin_ftparser.h.pp  plugin_password_validation.h.pp
man/: mysqlbinlog.1
mysql-test/: dgcov.pl  mariadb-test-run.pl  mysql-test-run.pl
mysql-test/include/: maybe_versioning.combinations  maybe_versioning.inc
mysql-test/lib/: mtr_process.pl
mysql-test/main/: alter_table.result  backup_log.test  (+62 more)
plugin/provider_lz4/: CMakeLists.txt
plugin/provider_lzma/: CMakeLists.txt
plugin/provider_lzo/: CMakeLists.txt
scripts/: mysql_secure_installation.sh  wsrep_sst_common.sh  wsrep_sst_mariabackup.sh  wsrep_sst_mysqldump.sh  wsrep_sst_rsync.sh  wsrep_sst_xtrabackup-v2.sh
sql/: CMakeLists.txt  backup.cc  ddl_log.cc  ddl_log.h  debug_sync.cc  field.cc  ha_partition.cc  ha_partition.h  handler.cc  handler.h  item.cc  item.h  item_func.cc  item_jsonfunc.cc  item_strfunc.cc  item_subselect.cc  json_table.cc  json_table.h  lock.cc  log.cc  log.h  log_event.cc  log_event.h  log_event_client.cc  log_event_server.cc  mdl.cc  multi_range_read.cc  my_apc.cc  my_json_writer.h  mysqld.cc  mysqld.h  opt_histogram_json.cc  opt_range.cc  opt_split.cc  opt_subselect.cc  opt_trace.h  parse_file.cc  parse_file.h  partition_info.cc  partition_info.h  (+77 more)
sql-common/: client.c
strings/: ctype-bin.c  ctype-simple.c  ctype-tis620.c  ctype-uca.c  ctype-uca.h  ctype-uca.ic  ctype-uca1400.h  ctype-ucs2.c  ctype-utf8.c  ctype.c  decimal.c  json_lib.c  strcoll.ic  uca-dump.c
tests/: drop_test.pl
vio/: viosslfactories.c
(+274 files in other folders)
